# bioformats-tourists

./: INSTALLATION.md  README.md  demo.py  fasta.py  fastq.py  genomic.py  license_mit.md  pyproject.toml  pytest.ini  reader.py  sequences.py  sticker.webm
docs/: Makefile  make.bat
docs/source/: bioformats.rst  conf.py
sample_data/: example.fasta  example.fastq  example.sam  example.vcf
src/: sam_reader.py  vcf_reader.py
src/bioformats/: __init__.py  cli.py  fasta.py  fastq.py  genomic.py  reader.py  sam.py  sequences.py  vcf.py  vcf_reader.py
tests/: test_fasta.py  test_fastq.py  test_sam.py  test_sam_reader.py  test_vcf.py  test_vcf_reader.py
