[build-system]
# Стандартный минимальный билд-бекенд
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioformats"
version = "0.1.0"
description = "Учебный пакет для чтения и анализа форматов FASTA, FASTQ, SAM и VCF."
authors = [
    { name = "bioformats-tourists team", email = "team@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# вот здесь перечислены зависимости, которые pip установит при установке пакета
dependencies = [
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]


[project.urls]
Homepage = "https://github.com/bioinf-rnrmu-stotoshka/bioformats-tourists"
Repository = "https://github.com/bioinf-rnrmu-stotoshka/bioformats-tourists"

# (необязательно, но удобно)
[project.scripts]
bioformats = "bioformats.cli:main"
